lab07/01/eventlistener-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: sample-ingress 
  annotations: 
    kubernetes.io/ingress.class: nginx 
spec:
  rules:
  - host: eventlistener.169.51.200.74.nip.io
    http: 
      paths: 
      - path: /example
        pathType: Prefix 
        backend: 
          service:
            name: webhook-eventsource-svc
            port: 
              number: 12000
