lab07/01/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: argocd-ingress 
  annotations: 
    kubernetes.io/ingress.class: nginx 
spec:
  rules:
  - host: argocd.169.51.203.127.nip.io
    http: 
      paths: 
      - path: /
        pathType: Prefix 
        backend: 
          service:
            name: argocd-server
            port: 
              number: 80
